--- a/src/reportTemplates/StaffPerformanceException.jrxml
+++ b/src/reportTemplates/StaffPerformanceException.jrxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="17e9b7c9-9691-43f9-84fe-8d6ba9623a35">
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT
      count(TRANSACTION_SERVICE."SERVICEID") AS Number_of_Services,
@@ -24,28 +27,46 @@ GROUP BY
 		<band/>
 	</background>
 	<title>
-		<band height="72">
+		<band height="166">
 			<frame>
-				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="038b3d50-19b5-49f6-bc40-7dda16caeac5"/>
+				<reportElement mode="Opaque" x="1" y="-6" width="555" height="172" backcolor="#006699" uuid="7a0ccf6a-dc00-4448-8bc3-f2f2a30f62be"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="e978ec4f-4784-4877-a5d2-b64b219522a9"/>
-					<textElement>
-						<font size="34" isBold="true"/>
+					<reportElement x="48" y="14" width="507" height="63" forecolor="#FFFFFF" uuid="61cab2b6-3e4a-420f-b8ea-d1589b518edd"/>
+					<textElement textAlignment="Center" verticalAlignment="Top">
+						<font size="14" isBold="true"/>
 					</textElement>
-					<text><![CDATA[TITLE]]></text>
+					<text><![CDATA[Animal Medical Centre
+510 E 62nd St, 81100 Johor Bahru, Johor Darul Takzim, Malaysia
+Phone no: 607-3676531]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="c0a9a9af-d434-48c0-b3e6-70b811ed14ab"/>
-					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
+					<reportElement x="0" y="77" width="355" height="35" forecolor="#FFFFFF" uuid="de828de3-dd94-43ac-a8d6-974f8dff2488"/>
+					<textElement textAlignment="Left">
+						<font size="20" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Add a description here]]></text>
+					<text><![CDATA[Staff Performance Exception Report for ]]></text>
 				</staticText>
+				<elementGroup>
+					<textField pattern="d/M/yyyy">
+						<reportElement x="257" y="112" width="124" height="20" forecolor="#FFFFFF" uuid="e7f3b61b-e04b-4b13-b0d2-266b95f1eb88"/>
+						<textElement>
+							<font size="13"/>
+						</textElement>
+						<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+					</textField>
+					<staticText>
+						<reportElement x="192" y="112" width="65" height="20" forecolor="#FFFFFF" uuid="60f88b11-f753-4577-af58-be87465b6ca4"/>
+						<textElement>
+							<font size="13"/>
+						</textElement>
+						<text><![CDATA[Printed on]]></text>
+					</staticText>
+				</elementGroup>
 			</frame>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="13"/>
+		<band/>
 	</pageHeader>
 	<columnHeader>
 		<band height="21">
@@ -53,39 +74,39 @@ GROUP BY
 				<reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="9383e636-6dfc-443f-92b0-3784e48645ee"/>
 			</line>
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="0bf57f0e-db09-4b9b-a21e-5ef2a6f9dfa5"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
+				<reportElement mode="Opaque" x="293" y="0" width="152" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="0bf57f0e-db09-4b9b-a21e-5ef2a6f9dfa5"/>
+				<textElement>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[NUMBER_OF_SERVICES]]></text>
+				<text><![CDATA[NUMBER OF SERVICES]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="111" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="7a9a42fa-19a9-4a57-9489-dd54b3b3e592"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
+				<reportElement mode="Opaque" x="445" y="0" width="110" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="7a9a42fa-19a9-4a57-9489-dd54b3b3e592"/>
+				<textElement>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TOTALREVENUE]]></text>
+				<text><![CDATA[TOTAL REVENUE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="222" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="d0f6e7c3-a2af-4afb-8cdc-03e45b29b97b"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
+				<reportElement mode="Opaque" x="1" y="0" width="93" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="d0f6e7c3-a2af-4afb-8cdc-03e45b29b97b"/>
+				<textElement>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[STAFF_STAFFIC]]></text>
+				<text><![CDATA[STAFF IC]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="333" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="719d0761-34cb-4458-baec-097cf7c5884e"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
+				<reportElement mode="Opaque" x="94" y="0" width="89" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="719d0761-34cb-4458-baec-097cf7c5884e"/>
+				<textElement>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[STAFF_STAFFNAME]]></text>
+				<text><![CDATA[STAFF NAME]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="444" y="0" width="111" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="e7a89580-c46d-4d19-a600-c58aefe7818a"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
+				<reportElement mode="Opaque" x="183" y="0" width="110" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="e7a89580-c46d-4d19-a600-c58aefe7818a"/>
+				<textElement>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[STAFF_STAFFPOSITION]]></text>
+				<text><![CDATA[STAFF POSITION]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -95,37 +116,37 @@ GROUP BY
 				<reportElement positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1" uuid="25c5c661-201f-4b3c-9477-3cff04697c8c"/>
 			</line>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="0" y="0" width="111" height="20" uuid="fa997124-067b-44e2-8725-e0487c5df820"/>
-				<textElement>
-					<font size="14"/>
+				<reportElement x="293" y="0" width="152" height="20" uuid="fa997124-067b-44e2-8725-e0487c5df820"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NUMBER_OF_SERVICES}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="111" y="0" width="111" height="20" uuid="4193c783-b134-4572-b88e-91e50adc97d3"/>
+				<reportElement x="445" y="0" width="111" height="20" uuid="4193c783-b134-4572-b88e-91e50adc97d3"/>
 				<textElement>
-					<font size="14"/>
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{TOTALREVENUE}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="222" y="0" width="111" height="20" uuid="b2b807a5-38fc-40e2-9703-70b508b0cae4"/>
+				<reportElement x="1" y="0" width="93" height="20" uuid="b2b807a5-38fc-40e2-9703-70b508b0cae4"/>
 				<textElement>
-					<font size="14"/>
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{STAFF_STAFFIC}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="333" y="0" width="111" height="20" uuid="af1eae9a-6825-4a34-a81f-5d8e9ae6cedb"/>
+				<reportElement x="94" y="0" width="99" height="20" uuid="af1eae9a-6825-4a34-a81f-5d8e9ae6cedb"/>
 				<textElement>
-					<font size="14"/>
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{STAFF_STAFFNAME}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="444" y="0" width="111" height="20" uuid="70d57475-2c40-48bb-a5fa-53a721618f5a"/>
+				<reportElement x="193" y="0" width="100" height="20" uuid="70d57475-2c40-48bb-a5fa-53a721618f5a"/>
 				<textElement>
-					<font size="14"/>
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{STAFF_STAFFPOSITION}]]></textFieldExpression>
 			</textField>
@@ -136,18 +157,14 @@ GROUP BY
 	</columnFooter>
 	<pageFooter>
 		<band height="17">
-			<textField>
-				<reportElement mode="Opaque" x="0" y="4" width="515" height="13" backcolor="#E6E6E6" uuid="f5777a99-7d7b-4c69-958d-3f36e954419a"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
-			</textField>
 			<textField evaluationTime="Report">
 				<reportElement mode="Opaque" x="515" y="4" width="40" height="13" backcolor="#E6E6E6" uuid="9ba766ee-524f-49d5-8998-48d72f1003d8"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="0" y="4" width="100" height="13" uuid="c9dd27a3-a79b-43f6-be17-781fb9845a4d"/>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			<textField>
+				<reportElement mode="Opaque" x="1" y="0" width="515" height="17" backcolor="#E6E6E6" uuid="f5777a99-7d7b-4c69-958d-3f36e954419a"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
